# drawing_app

./: .gitignore  CMakeLists.txt  README.md  resource.rc
include/: consolePrinter.hpp  global.hpp  gui.hpp  resource.hpp
src/: consolePrinter.cpp  drawCanvas.cpp  main.cpp  menu.cpp  toolbar.cpp
src/tests_a_bus/: o_main.cpp  s_main.cpp  t_main.cpp
